--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="./lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./lib/wow-1.1.2/animate.min.css">
+    <link rel="stylesheet" href=".../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href=".../lib/wow-1.1.2/animate.min.css">
 
     <title>E-Choosing </title>
 </head>
@@ -21,10 +21,10 @@
 
 
 
-    <script src="./lib/jQuery-3.5.1/jquery.slim.min.js"></script>
-    <script src="./lib/wow-1.1.2/wow.min.js"></script>
-    <script src="./lib/wow-1.1.2/init.js"></script>
-    <script src="./lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src=".../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
+    <script src=".../lib/wow-1.1.2/wow.min.js"></script>
+    <script src=".../lib/wow-1.1.2/init.js"></script>
+    <script src=".../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
 
 </body>
 
