--- a/pages/courses.html
+++ b/pages/courses.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/static/image/dark.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/image/dark.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="/lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/wow-1.1.2/animate.min.css">
+    <link rel="stylesheet" href="../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../lib/wow-1.1.2/animate.min.css">
 
-    <link rel="stylesheet" href="/static/style/GlobalStyle.css">
-    <link rel="stylesheet" href="/static/style/HeaderBanner.css">
-    <link rel="stylesheet" href="/static/style/Footer/Footer.css">
-    <link rel="stylesheet" href="/static/style/Course/Course.css">
-    <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
+    <link rel="stylesheet" href="../static/style/GlobalStyle.css">
+    <link rel="stylesheet" href="../static/style/HeaderBanner.css">
+    <link rel="stylesheet" href="../static/style/Footer/Footer.css">
+    <link rel="stylesheet" href="../static/style/Course/Course.css">
+    <link rel="stylesheet" href="../static/style/NavigationBar/NavigationBar.css">
 
 
     <link rel="stylesheet" href="/block.css">
@@ -142,7 +142,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.2s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/vatly.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/vatly.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Physics</h5>
@@ -164,7 +164,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.4s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/toan.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/toan.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Math</h5>
@@ -186,7 +186,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.6s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/tin-2.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/tin-2.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Informatics</h5>
@@ -208,7 +208,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.8s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/dia.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/dia.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Geography</h5>
@@ -230,7 +230,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.2s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/vatly.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/vatly.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Physics</h5>
@@ -252,7 +252,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.4s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/toan.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/toan.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Math</h5>
@@ -274,7 +274,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.6s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/dia.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/dia.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Geography</h5>
@@ -296,7 +296,7 @@
             <!-- 1 Khoá học :'( -->
             <div class="col-lg-3 col-md-6 mb-4 ">
                 <div data-wow-delay="0.8s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/tin-2.png" alt="">
+                    <img class="mb-2 course-img" src="../static/image/tin-2.png" alt="">
                     <a href="./doing.html">
                         <div class="content py-2 text-center bg-light ">
                             <h5 class="mb-0">Informatics</h5>
@@ -390,10 +390,10 @@
 
 
 
-    <script src="/lib/jQuery-3.5.1/jquery.slim.min.js"></script>
-    <script src="/lib/wow-1.1.2/wow.min.js"></script>
-    <script src="/lib/wow-1.1.2/init.js"></script>
-    <script src="/lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
+    <script src="../lib/wow-1.1.2/wow.min.js"></script>
+    <script src="../lib/wow-1.1.2/init.js"></script>
+    <script src="../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
 
 </body>
 
