--- a/pages/doing.html
+++ b/pages/doing.html
@@ -6,19 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/static/image/dark.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/image/dark.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="/lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/wow-1.1.2/animate.min.css">
+    <link rel="stylesheet" href="../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../lib/wow-1.1.2/animate.min.css">
 
-    <link rel="stylesheet" href="/static/style/GlobalStyle.css">
-    <link rel="stylesheet" href="/static/style/HeaderBanner.css">
-    <link rel="stylesheet" href="/static/style/Footer/Footer.css">
-    <link rel="stylesheet" href="/static/style/Menu/Menu.css">
-    <link rel="stylesheet" href="/static/style/Doing/Doing.css">
-    <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
+    <link rel="stylesheet" href="../static/style/GlobalStyle.css">
+    <link rel="stylesheet" href="../static/style/HeaderBanner.css">
+    <link rel="stylesheet" href="../static/style/Footer/Footer.css">
+    <link rel="stylesheet" href="../static/style/Menu/Menu.css">
+    <link rel="stylesheet" href="../static/style/Doing/Doing.css">
+    <link rel="stylesheet" href="../static/style/NavigationBar/NavigationBar.css">
 
 
     <link rel="stylesheet" href="/block.css">
@@ -91,7 +91,7 @@
                 <div class="Menu mb-3">
                     <div class="wow fadeInLeft box bg-light p-3 shadow">
                         <div class="info d-flex align-items-center ml-3">
-                            <img class="rounded-circle mr-3 shadow" src="/static/image/avatar.jpg" width="70px" alt="">
+                            <img class="rounded-circle mr-3 shadow" src="../static/image/avatar.jpg" width="70px" alt="">
                             <div class="">
                                 <h4 class="font-weight-bold">Nguyễn Quốc Thịnh</h4>
                                 <h6 class="pl-2"><span class="font-weight-bold">Class:</span> IT-17302</h6>
@@ -172,7 +172,7 @@
                         <h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad aliquid dolor est harum
                             voluptates! Itaque, ratione consectetur. A tenetur sapiente officia? Aliquid esse
                             aliquam soluta temporibus quis adipisci nulla itaque?</h6>
-                        <img class="question-img" src="/static/image/banner_3.png" alt="Question 1">
+                        <img class="question-img" src="../static/image/banner_3.png" alt="Question 1">
                     </div>
 
                     <div class="answer-container">
@@ -331,10 +331,10 @@
 
 
 
-    <script src="/lib/jQuery-3.5.1/jquery.slim.min.js"></script>
-    <script src="/lib/wow-1.1.2/wow.min.js"></script>
-    <script src="/lib/wow-1.1.2/init.js"></script>
-    <script src="/lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
+    <script src="../lib/wow-1.1.2/wow.min.js"></script>
+    <script src="../lib/wow-1.1.2/init.js"></script>
+    <script src="../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
 
     <script>
         $(".answer-item").click(function () {
