--- a/pages/login.html
+++ b/pages/login.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/static/image/dark.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/image/dark.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="/lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/wow-1.1.2/animate.min.css">
+    <link rel="stylesheet" href="../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../lib/wow-1.1.2/animate.min.css">
 
-    <link rel="stylesheet" href="/static/style/GlobalStyle.css">
-    <link rel="stylesheet" href="/static/style/Footer/Footer.css">
-    <link rel="stylesheet" href="/static/style/SignIn/SignIn.css">
-    <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
+    <link rel="stylesheet" href="../static/style/GlobalStyle.css">
+    <link rel="stylesheet" href="../static/style/Footer/Footer.css">
+    <link rel="stylesheet" href="../static/style/SignIn/SignIn.css">
+    <link rel="stylesheet" href="../static/style/NavigationBar/NavigationBar.css">
 
 
     <link rel="stylesheet" href="/block.css">
@@ -25,7 +25,7 @@
     <title>E-Choosing </title>
 </head>
 
-<body>
+<body ng-app="app">
 
     <!-- Navigation -->
     <div class="">
@@ -101,12 +101,12 @@
                 <h1 class="text-center font-weight-bolder">Login</h1>
 
                 <div class="box-body">
-                    <form>
+                    <form ng-controller="login-from">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Username</label>
                             <i class="bi bi-person form-icon"></i>
-                            <input type="text" class="form-control shadow-none" id="exampleInputEmail1"
-                                 placeholder="Type your username ...">
+                            <input ng-model="username"  type="text" class="form-control shadow-none" id="exampleInputEmail1"
+                                placeholder="Type your username ...">
                             <small class="form-text text-muted d-none">Please enter your username.</small>
                         </div>
 
@@ -114,8 +114,8 @@
                             <label for="exampleInputEmail1">Password</label>
                             <i class="bi bi-key form-icon"></i>
                             <i class="bi bi-eye right-icon"></i>
-                            <input type="password" class="form-control shadow-none" id="exampleInputEmail1"
-                                 placeholder="Type your password ...">
+                            <input ng-model="password" type="password" class="form-control shadow-none" id="exampleInputEmail1"
+                                placeholder="Type your password ...">
                             <small class="form-text text-muted d-none">Please enter your password</small>
                         </div>
 
@@ -125,7 +125,7 @@
                             </a>
                         </div>
 
-                        <button class="btn bg-linear-gradient w-100 mb-3 hover">
+                        <button ng-click="" class="btn bg-linear-gradient w-100 mb-3 hover">
                             Login
                         </button>
 
@@ -158,80 +158,83 @@
     </div>
     <!-- Content -->
 
-   <!-- Footer -->
-   <footer class="wow fadeInUp w-100 py-3 bg-linear-gradient Footer">
-    <div class="container text-light ">
-        <div class="row pt-3">
-            <div class="col-lg-4 col-md-6 mb-3">
-                <div class="d-flex align-items-center">
-                    <img src="../static/image/light.png" width="60px">
-                    <h4 class="font-weight-bold ml-3">E-Choosing</h4>
-                </div>
-                <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
-                    with instant
-                    results for improvement. It offers a variety of subjects to choose from and a user-friendly
-                    interface.</p>
-                <h6 class="font-weight-bold link">
-                    <a href="../index.html">About Us <i class="bi bi-arrow-right ml-2"></i></a>
-                </h6>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-3">
-                <h4 class="font-weight-bold">Contract</h4>
-                <p><span><i class="bi bi-geo-fill mr-2"></i></span>542 Ton Duc Thang, Da Nang</p>
-                <p><span><i class="bi bi-telephone-fill mr-2"></i></span>0123456789</p>
-                <p><span><i class="bi bi-envelope-fill mr-2"></i></span>thinhnq3009@gmail.com</p>
-                <div class="d-flex contract-method">
-                    <i class="bi bi-facebook"></i>
-                    <i class="bi bi-youtube"></i>
-                    <i class="bi bi-github"></i>
-                    <i class="bi bi-instagram"></i>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-6 mb-3">
-                <h4 class="font-weight-bold">Link</h4>
-                <a href="./index.html">
-                    <p class="mb-2 link">
-                        <i class="bi bi-chevron-right mr-2"></i>Home
-                    </p>
-                </a>
-                <a href="./index.html">
-                    <p class="mb-2 link">
-                        <i class="bi bi-chevron-right mr-2"></i>About Us
-                    </p>
-                </a>
-                <a href="./contract.html">
-                    <p class="mb-2 link">
-                        <i class="bi bi-chevron-right mr-2"></i>Contract
-                    </p>
-                </a>
-
-            </div>
-
-            <div class="col-lg-3 col-md-6 mb-3">
-                <h4 class="font-weight-bold">Newsletter</h4>
-                <p>Please enter your email address to receive notifications from us as soon as possible.</p>
-                <form>
-                    <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Enter your email">
-                        <div class="input-group-append">
-                            <a href="./signup.html" class="btn btn-customize" type="button">Register</a>
-                        </div>
+    <!-- Footer -->
+    <footer class="wow fadeInUp w-100 py-3 bg-linear-gradient Footer">
+        <div class="container text-light ">
+            <div class="row pt-3">
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <div class="d-flex align-items-center">
+                        <img src="../static/image/light.png" width="60px">
+                        <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                     </div>
-                </form>
+                    <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
+                        with instant
+                        results for improvement. It offers a variety of subjects to choose from and a user-friendly
+                        interface.</p>
+                    <h6 class="font-weight-bold link">
+                        <a href="../index.html">About Us <i class="bi bi-arrow-right ml-2"></i></a>
+                    </h6>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-3">
+                    <h4 class="font-weight-bold">Contract</h4>
+                    <p><span><i class="bi bi-geo-fill mr-2"></i></span>542 Ton Duc Thang, Da Nang</p>
+                    <p><span><i class="bi bi-telephone-fill mr-2"></i></span>0123456789</p>
+                    <p><span><i class="bi bi-envelope-fill mr-2"></i></span>thinhnq3009@gmail.com</p>
+                    <div class="d-flex contract-method">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-youtube"></i>
+                        <i class="bi bi-github"></i>
+                        <i class="bi bi-instagram"></i>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 mb-3">
+                    <h4 class="font-weight-bold">Link</h4>
+                    <a href="./index.html">
+                        <p class="mb-2 link">
+                            <i class="bi bi-chevron-right mr-2"></i>Home
+                        </p>
+                    </a>
+                    <a href="./index.html">
+                        <p class="mb-2 link">
+                            <i class="bi bi-chevron-right mr-2"></i>About Us
+                        </p>
+                    </a>
+                    <a href="./contract.html">
+                        <p class="mb-2 link">
+                            <i class="bi bi-chevron-right mr-2"></i>Contract
+                        </p>
+                    </a>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-3">
+                    <h4 class="font-weight-bold">Newsletter</h4>
+                    <p>Please enter your email address to receive notifications from us as soon as possible.</p>
+                    <form>
+                        <div class="input-group mb-3">
+                            <input type="email" class="form-control" placeholder="Enter your email">
+                            <div class="input-group-append">
+                                <a href="./signup.html" class="btn btn-customize" type="button">Register</a>
+                            </div>
+                        </div>
+                    </form>
 
 
+                </div>
             </div>
         </div>
-    </div>
-</footer>
-<!-- Footer -->
+    </footer>
+    <!-- Footer -->
 
 
 
-    <script src="/lib/jQuery-3.5.1/jquery.slim.min.js"></script>
-    <script src="/lib/wow-1.1.2/wow.min.js"></script>
-    <script src="/lib/wow-1.1.2/init.js"></script>
-    <script src="/lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
+    <script src="../lib/wow-1.1.2/wow.min.js"></script>
+    <script src="../lib/wow-1.1.2/init.js"></script>
+    <script src="../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/angularJS v1.8.2/angular.min.js"></script>
+
+    <script src="../static/script/login.js"></script>
 
 </body>
 
