--- a/pages/signup.html
+++ b/pages/signup.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/static/image/dark.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/image/dark.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="/lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/wow-1.1.2/animate.min.css">
+    <link rel="stylesheet" href="../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../lib/wow-1.1.2/animate.min.css">
 
-    <link rel="stylesheet" href="/static/style/GlobalStyle.css">
-    <link rel="stylesheet" href="/static/style/Footer/Footer.css">
-    <link rel="stylesheet" href="/static/style/SignIn/SignIn.css">
-    <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
+    <link rel="stylesheet" href="../static/style/GlobalStyle.css">
+    <link rel="stylesheet" href="../static/style/Footer/Footer.css">
+    <link rel="stylesheet" href="../static/style/SignIn/SignIn.css">
+    <link rel="stylesheet" href="../static/style/NavigationBar/NavigationBar.css">
 
 
     <link rel="stylesheet" href="/block.css">
@@ -244,10 +244,10 @@
 
 
 
-    <script src="/lib/jQuery-3.5.1/jquery.slim.min.js"></script>
-    <script src="/lib/wow-1.1.2/wow.min.js"></script>
-    <script src="/lib/wow-1.1.2/init.js"></script>
-    <script src="/lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
+    <script src="../lib/wow-1.1.2/wow.min.js"></script>
+    <script src="../lib/wow-1.1.2/init.js"></script>
+    <script src="../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
 
 </body>
 
