--- a/pages/user-info.html
+++ b/pages/user-info.html
@@ -6,19 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/static/image/dark.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/image/dark.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="/lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/wow-1.1.2/animate.min.css">
+    <link rel="stylesheet" href="../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../lib/wow-1.1.2/animate.min.css">
 
-    <link rel="stylesheet" href="/static/style/GlobalStyle.css">
-    <link rel="stylesheet" href="/static/style/HeaderBanner.css">
-    <link rel="stylesheet" href="/static/style/Footer/Footer.css">
-    <link rel="stylesheet" href="/static/style/UserInfo/UserInfo.css">
+    <link rel="stylesheet" href="../static/style/GlobalStyle.css">
+    <link rel="stylesheet" href="../static/style/HeaderBanner.css">
+    <link rel="stylesheet" href="../static/style/Footer/Footer.css">
+    <link rel="stylesheet" href="../static/style/UserInfo/UserInfo.css">
 
-    <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
+    <link rel="stylesheet" href="../static/style/NavigationBar/NavigationBar.css">
 
 
     <link rel="stylesheet" href="/block.css">
@@ -90,7 +90,7 @@
                     <div class="wow fadeInLeft box">
                         <div class="avatar mb-3 mx-auto">
                             <i class="bi bi-images"></i>
-                            <img class="avt-img" src="/static/image/avatar.jpg" alt="">
+                            <img class="avt-img" src="../static/image/avatar.jpg" alt="">
                         </div>
                         <h3 class="text-center font-weight-bold mb-5">Nguyễn Quốc Thịnh</h3>
 
@@ -234,7 +234,7 @@
             <div class="row pt-3">
                 <div class="col-lg-4 col-md-6 mb-3">
                     <div class="d-flex align-items-center">
-                        <img src="/static/image/light.png" width="60px">
+                        <img src="../static/image/light.png" width="60px">
                         <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                     </div>
                     <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
@@ -352,10 +352,10 @@
     </div>
     <!-- Modal -->
 
-    <script src="/lib/jQuery-3.5.1/jquery.slim.min.js"></script>
-    <script src="/lib/wow-1.1.2/wow.min.js"></script>
-    <script src="/lib/wow-1.1.2/init.js"></script>
-    <script src="/lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
+    <script src="../lib/wow-1.1.2/wow.min.js"></script>
+    <script src="../lib/wow-1.1.2/init.js"></script>
+    <script src="../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
 
 </body>
 
