Create Doing Page

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="../static/style/NavigationBar/NavigationBar.css" />
         <link rel="stylesheet" href="../static/style/SignIn/SignIn.css" />
         <link rel="stylesheet" href="../static/style/UserInfo/UserInfo.css" />
+        <link rel="stylesheet" href="../static/style/Doing/Doing.css" />
 
         <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
         <script src="../lib/wow-1.1.2/wow.min.js"></script>
@@ -38,7 +39,7 @@
         <script src="./components/app-loading/app-loading.component.js"></script>
         <script src="./components/app-signup/app-signup.component.js"></script>
         <script src="./components/app-info/app-info.component.js"></script>
-
+        <script src="./components/app-doing/app-doing.component.js"></script>
         <title>E-Choosing</title>
     </head>
 
