Create Summary page

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
         <link rel="stylesheet" href="../static/style/SignIn/SignIn.css" />
         <link rel="stylesheet" href="../static/style/UserInfo/UserInfo.css" />
         <link rel="stylesheet" href="../static/style/Doing/Doing.css" />
+        <link rel="stylesheet" href="../static/style/Summary/Summary.css" />
+
 
         <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
         <script src="../lib/wow-1.1.2/wow.min.js"></script>
@@ -33,13 +35,17 @@
         <script src="./app.filter.js"></script>
         <script src="./app.directive.js"></script>
 
+        <script src="./pages/app-doing/submission-factory.js"></script>
+
+        <script src="./components/app-loading/app-loading.component.js"></script>
         <script src="./components/app-header/app-header.component.js"></script>
         <script src="./components/app-footer/app-footer.component.js"></script>
-        <script src="./components/app-login/app-login.component.js"></script>
-        <script src="./components/app-loading/app-loading.component.js"></script>
-        <script src="./components/app-signup/app-signup.component.js"></script>
-        <script src="./components/app-info/app-info.component.js"></script>
-        <script src="./components/app-doing/app-doing.component.js"></script>
+
+        <script src="./pages/app-login/app-login.controller.js"></script>
+        <script src="./pages/app-signup/app-signup.controller.js"></script>
+        <script src="./pages/app-info/app-info.controller.js"></script>
+        <script src="./pages/app-doing/app-doing.controller.js"></script>
+
         <title>E-Choosing</title>
     </head>
 
