--- a/app/pages/app-info/app-info.template.html
+++ b/app/pages/app-info/app-info.template.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 
-<main class="UserInfo container-fluid my-5">
+<main class="UserInfo container-fluid my-5" ng-controller="infoController">
     <div class="container">
         <div class="row">
             <div class="col-md-4 px-2 mb-3">
