--- a/app/pages/app-signup/app-signup.template.html
+++ b/app/pages/app-signup/app-signup.template.html
@@ -1,5 +1,5 @@
 <!-- Content -->
-<div class="container-fluid SignIn">
+<div class="container-fluid SignIn" ng-controller="signupController">
     <i class="bi bi-check2-circle stamp"></i>
     <div class="row">
         <div class="wow fadeInUp col-lg-7 col-md-10 box mx-auto">
