--- a/index.html
+++ b/index.html
@@ -6,25 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="./image/logo.svg" type="image/x-icon">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
-    <link rel="stylesheet" href=".../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".../lib/wow-1.1.2/animate.min.css">
-
     <title>E-Choosing </title>
 </head>
 
 <body>
 
+    <script>
+        window.location.replace("/app/");
+    </script>
 
-
-
-    <script src=".../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
-    <script src=".../lib/wow-1.1.2/wow.min.js"></script>
-    <script src=".../lib/wow-1.1.2/init.js"></script>
-    <script src=".../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
 
 </body>
 
