--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
         <script src="../lib/wow-1.1.2/wow.min.js"></script>
         <script src="../lib/wow-1.1.2/init.js"></script>
         <script src="../lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
-        <script src="../lib/angular-1.8.2/angular.min.js"></script>
-        <script src="../lib/angular-1.8.2/angular-route.min.js"></script>
+        <script src="../lib/angular-1.8.2/angular.js"></script>
+        <script src="../lib/angular-1.8.2/angular-route.js"></script>
 
         <script src="./app.module.js"></script>
         <script src="./app.config.js"></script>
@@ -42,6 +42,7 @@
         <script src="./pages/app-signup/app-signup.controller.js"></script>
         <script src="./pages/app-info/app-info.controller.js"></script>
         <script src="./pages/app-doing/app-doing.controller.js"></script>
+        <script src="./pages/app-summary/app-summary.controller.js"></script>
 
         <script src="./pages/app-doing/submission-factory.js"></script>
         <script src="./pages/app-doing/complete-factory.js"></script>
