--- a/app/index.html
+++ b/app/index.html
@@ -38,14 +38,19 @@
         <script src="./app.filter.js"></script>
         <script src="./app.directive.js"></script>
 
+        <!-- Controller -->
         <script src="./pages/app-login/app-login.controller.js"></script>
         <script src="./pages/app-signup/app-signup.controller.js"></script>
         <script src="./pages/app-info/app-info.controller.js"></script>
         <script src="./pages/app-doing/app-doing.controller.js"></script>
         <script src="./pages/app-summary/app-summary.controller.js"></script>
 
+        <!-- Service -->
+        <script src="./services/session.service.js"></script>
         <script src="./pages/app-doing/submission-factory.js"></script>
         <script src="./pages/app-doing/complete-factory.js"></script>
+
+        <!-- Component -->
         <script src="./components/app-loading/app-loading.component.js"></script>
         <script src="./components/app-header/app-header.component.js"></script>
         <script src="./components/app-footer/app-footer.component.js"></script>
