complete quizzes bage

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         />
 
         <link rel="stylesheet" href="../lib/bootstrap-4.6.2/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="../lib/bootstrap-4.6.2/dist/css/form-floating.css" />
         <link rel="stylesheet" href="../lib/wow-1.1.2/animate.min.css" />
 
         <link rel="stylesheet" href="../static/style/GlobalStyle.css" />
@@ -25,6 +26,8 @@
         <link rel="stylesheet" href="../static/style/Doing/Doing.css" />
         <link rel="stylesheet" href="../static/style/Summary/Summary.css" />
         <link rel="stylesheet" href="../static/style/404-style.css" />
+        <link rel="stylesheet" href="../static/style/Contract/Contract.css" />
+        <link rel="stylesheet" href="../static/style/Course/Course.css" />
 
         <script src="../lib/jQuery-3.5.1/jquery.slim.min.js"></script>
         <script src="../lib/wow-1.1.2/wow.min.js"></script>
@@ -44,6 +47,7 @@
         <script src="./pages/app-info/app-info.controller.js"></script>
         <script src="./pages/app-doing/app-doing.controller.js"></script>
         <script src="./pages/app-summary/app-summary.controller.js"></script>
+        <script src="./pages/app-quizzes/quizzesController.js"></script>
 
         <!-- Service -->
         <script src="./services/session.service.js"></script>
@@ -55,6 +59,7 @@
         <script src="./components/app-header/app-header.component.js"></script>
         <script src="./components/app-footer/app-footer.component.js"></script>
         <script src="./components/app-modal/app-modal.component.js"></script>
+        <script src="./components/app-banner/app-banner.component.js"></script>
 
         <title>E-Choosing</title>
     </head>
